--- a/src/main/resources/AjoutHotel.fxml
+++ b/src/main/resources/AjoutHotel.fxml
@@ -51,27 +51,32 @@
                style="-fx-background-color: #ffffff; -fx-border-color: #ccc; -fx-border-radius: 8; -fx-background-radius: 8; -fx-font-size: 13px; -fx-padding: 4 6;"
                GridPane.rowIndex="6" GridPane.columnIndex="1" />
 
-    <Label text="Image de l'hôtel:" style="-fx-font-weight: bold; -fx-text-fill: #34495e;" GridPane.rowIndex="7" GridPane.columnIndex="0" />
+    <Label text="Note de l'hôtel:" style="-fx-font-weight: bold; -fx-text-fill: #34495e;" GridPane.rowIndex="7" GridPane.columnIndex="0" />
+    <HBox fx:id="noteBox" spacing="4" GridPane.rowIndex="7" GridPane.columnIndex="1" />
+
+
+
+    <Label text="Image de l'hôtel:" style="-fx-font-weight: bold; -fx-text-fill: #34495e;" GridPane.rowIndex="8" GridPane.columnIndex="0" />
     <Button text="Choisir l'image"
             onAction="#onChooseImage"
             style="-fx-background-color: #00c6ff; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8; -fx-padding: 6 16; -fx-cursor: hand;"
-            GridPane.rowIndex="7" GridPane.columnIndex="1" />
+            GridPane.rowIndex="8" GridPane.columnIndex="1" />
 
     <ImageView fx:id="imageView"
               style="-fx-border-color: #ccc; -fx-border-radius: 8; -fx-background-radius: 8;"
               fitHeight="150" fitWidth="150"
-              GridPane.rowIndex="8" GridPane.columnIndex="0" GridPane.columnSpan="2"/>
+              GridPane.rowIndex="9" GridPane.columnIndex="0" GridPane.columnSpan="2"/>
 
 
     <Label fx:id="errorLabel"
            style="-fx-text-fill: #D32F2F; -fx-font-size: 12px;"
            wrapText="true"
-           GridPane.rowIndex="8"
+           GridPane.rowIndex="9"
            GridPane.columnIndex="0"
            GridPane.columnSpan="2" />
 
     <HBox spacing="10"
-          GridPane.rowIndex="9"
+          GridPane.rowIndex="10"
           GridPane.columnIndex="0"
           GridPane.columnSpan="2"
           alignment="CENTER_RIGHT">
