--- a/src/main/resources/ClientReclamations.fxml
+++ b/src/main/resources/ClientReclamations.fxml
@@ -111,7 +111,11 @@
                         <Insets bottom="10.0" left="20.0" right="20.0" top="10.0" />
                     </padding>
                     <children>
-                        <Pane prefHeight="60.0" prefWidth="90.0" HBox.hgrow="ALWAYS" />
+                        <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#deleteReclamation" prefHeight="40.0" prefWidth="150.0" styleClass="button button-danger" text="Supprimer" disable="true">
+                            <HBox.margin>
+                                <Insets right="10.0" />
+                            </HBox.margin>
+                        </Button>
                         <Button fx:id="newReclamationButton" mnemonicParsing="false" onAction="#newReclamation" prefHeight="40.0" prefWidth="150.0" styleClass="button button-success" text="Nouvelle">
                             <HBox.margin>
                                 <Insets right="10.0" />
