--- a/src/main/resources/ClientReclamations.fxml
+++ b/src/main/resources/ClientReclamations.fxml
@@ -121,13 +121,8 @@
                                 <Insets right="10.0" />
                             </HBox.margin>
                         </Button>
-                        <Button fx:id="submitButton" mnemonicParsing="false" onAction="#submitReclamation" prefHeight="40.0" prefWidth="150.0" styleClass="button button-primary" text="Soumettre" />
+                        <Button fx:id="submitButton" mnemonicParsing="false" onAction="#submitReclamation" prefHeight="40.0" prefWidth="150.0" styleClass="button button-primary" text="Soumettre" visible="false" />
                         <Button fx:id="updateButton" mnemonicParsing="false" onAction="#updateReclamation" prefHeight="40.0" prefWidth="150.0" styleClass="button button-primary" text="Modifier" disable="true">
-                            <HBox.margin>
-                                <Insets left="10.0" />
-                            </HBox.margin>
-                        </Button>
-                        <Button fx:id="clearButton" mnemonicParsing="false" onAction="#clearForm" prefHeight="40.0" prefWidth="150.0" styleClass="button button-secondary" text="Effacer">
                             <HBox.margin>
                                 <Insets left="10.0" />
                             </HBox.margin>
