--- a/src/main/resources/ClientReclamations.fxml
+++ b/src/main/resources/ClientReclamations.fxml
@@ -50,7 +50,7 @@
                     </VBox.margin>
                 </HBox>
 
-                <ListView fx:id="reclamationsListView" prefHeight="180.0" prefWidth="700.0">
+                <ListView fx:id="reclamationsListView" prefHeight="180.0" prefWidth="700.0" styleClass="reclamations-list">
                     <VBox.margin>
                         <Insets bottom="20.0" left="25.0" right="25.0" top="10.0" />
                     </VBox.margin>
@@ -111,18 +111,18 @@
                         <Insets bottom="10.0" left="20.0" right="20.0" top="10.0" />
                     </padding>
                     <children>
-                        <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#deleteReclamation" prefHeight="40.0" prefWidth="150.0" styleClass="button button-danger" text="Supprimer" disable="true">
+                        <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#deleteReclamation" prefHeight="40.0" prefWidth="150.0" styleClass="button, button-danger" text="Supprimer" disable="true">
                             <HBox.margin>
                                 <Insets right="10.0" />
                             </HBox.margin>
                         </Button>
-                        <Button fx:id="newReclamationButton" mnemonicParsing="false" onAction="#newReclamation" prefHeight="40.0" prefWidth="150.0" styleClass="button button-success" text="Nouvelle">
+                        <Button fx:id="newReclamationButton" mnemonicParsing="false" onAction="#newReclamation" prefHeight="40.0" prefWidth="150.0" styleClass="button, button-success" text="Nouvelle">
                             <HBox.margin>
                                 <Insets right="10.0" />
                             </HBox.margin>
                         </Button>
-                        <Button fx:id="submitButton" mnemonicParsing="false" onAction="#submitReclamation" prefHeight="40.0" prefWidth="150.0" styleClass="button button-primary" text="Soumettre" disable="true" />
-                        <Button fx:id="updateButton" mnemonicParsing="false" onAction="#updateReclamation" prefHeight="40.0" prefWidth="150.0" styleClass="button button-primary" text="Modifier" disable="true">
+                        <Button fx:id="submitButton" mnemonicParsing="false" onAction="#submitReclamation" prefHeight="40.0" prefWidth="150.0" styleClass="button, button-primary" text="Soumettre" disable="true" />
+                        <Button fx:id="updateButton" mnemonicParsing="false" onAction="#updateReclamation" prefHeight="40.0" prefWidth="150.0" styleClass="button, button-primary" text="Modifier" disable="true">
                             <HBox.margin>
                                 <Insets left="10.0" />
                             </HBox.margin>
