--- a/src/main/resources/ListeHotels.fxml
+++ b/src/main/resources/ListeHotels.fxml
@@ -5,60 +5,57 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.image.*?>
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="controllers.ListeHotelsController">
-
     <children>
-        <!-- VBox anchors to fill the parent -->
         <VBox AnchorPane.topAnchor="0" AnchorPane.bottomAnchor="0"
               AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0"
               spacing="20">
-
-            <!-- TOP: Image and hotel details in one horizontal box -->
             <HBox spacing="20">
                 <padding>
                     <Insets top="20" right="20" bottom="0" left="20"/>
                 </padding>
-
-                <!-- Left: Big Image -->
-                <StackPane>
+                <StackPane prefWidth="400" prefHeight="300">
                     <ImageView fx:id="selectedImage"
-                               preserveRatio="true"
-                               fitWidth="400" fitHeight="300">
+                               fitWidth="400" fitHeight="300"
+                               preserveRatio="false">
                         <clip>
                             <Rectangle width="400" height="300" arcWidth="30" arcHeight="30"/>
                         </clip>
                     </ImageView>
                 </StackPane>
-
-                <!-- Right: Details and actions -->
                 <VBox spacing="10">
                     <Label fx:id="selectedTitle"
                            styleClass="hotel-title"
                            wrapText="true"/>
-
                     <Label fx:id="selectedDetails"
                            wrapText="true"
                            maxWidth="400"/>
-
                     <HBox fx:id="ratingBox" spacing="5"/>
-
                     <HBox spacing="10">
-                        <Button text="Éditer" onAction="#goToEditHotel" HBox.hgrow="ALWAYS"/>
-                        <Button text="Supprimer" onAction="#onDeleteHotel" HBox.hgrow="ALWAYS"/>
+                        <Button text="Modifier" onAction="#goToEditHotel" HBox.hgrow="ALWAYS"
+                         style="-fx-background-color: linear-gradient(to right, #f7971e, #ffd200); -fx-text-fill: white; -fx-background-radius: 15; -fx-font-weight: bold; -fx-cursor: hand;"/>
+                        <Button onAction="#onDeleteHotel" HBox.hgrow="ALWAYS" style="-fx-background-color: #e74c3c; -fx-background-radius: 8; -fx-cursor: hand;">
+                                    <graphic>
+                                        <ImageView fitHeight="16" fitWidth="16">
+                                            <image>
+                                                <Image url="@/images/trash.png"/>
+                                            </image>
+                                        </ImageView>
+                                    </graphic>
+                                    </Button>
+
                     </HBox>
                 </VBox>
             </HBox>
-
-            <!-- Divider line -->
-            <Separator/>
-
-            <!-- BOTTOM: Carousel of thumbnails -->
             <ScrollPane fx:id="carouselScroll"
-                        VBox.vgrow="ALWAYS"
-                        prefWidth="150.0"
-                        fitToHeight="true">
+                        fitToWidth="false"
+                        fitToHeight="true"
+                        prefViewportWidth="200"
+                        vbarPolicy="NEVER">
+
                 <content>
                     <HBox fx:id="carousel" spacing="10">
                         <padding>
